Liens entre un component et son parent - injection

--- a/angular/coding/learning/dev-env/data/new_school/snapface/src/app/app.component.html
+++ b/angular/coding/learning/dev-env/data/new_school/snapface/src/app/app.component.html
@@ -2,6 +2,6 @@
 </style>
 
 <app-face-snap [faceSnap]="oneFaceSnap"></app-face-snap>
-<!-- <app-face-snap></app-face-snap> -->
+<app-face-snap [faceSnap]="anotherFaceSnap"></app-face-snap>
 
 <router-outlet></router-outlet>
