--- a/angular/coding/learning/dev-env/data/new_school/snapface/src/app/app.component.html
+++ b/angular/coding/learning/dev-env/data/new_school/snapface/src/app/app.component.html
@@ -3,5 +3,6 @@
 
 <app-face-snap [faceSnap]="oneFaceSnap"></app-face-snap>
 <app-face-snap [faceSnap]="anotherFaceSnap"></app-face-snap>
+<app-face-snap [faceSnap]="lastFaceSnap" *ngIf="lastFaceSnap.imageUrl"></app-face-snap>
 
 <router-outlet></router-outlet>
