--- a/angular/coding/learning/dev-env/data/new_school/snapface/src/app/face-snap/face-snap.component.html
+++ b/angular/coding/learning/dev-env/data/new_school/snapface/src/app/face-snap/face-snap.component.html
@@ -1,4 +1,4 @@
-<div class="face-snap-card">
+<div class="face-snap-card" [ngClass]="{ snapped: faceSnap.snaps == 1}">
     <h2>{{ faceSnap.title }}</h2>
     <img [src]="faceSnap.imageUrl" [alt]="faceSnap.title">
     <p>Mis en ligne le {{ faceSnap.createdDate }}</p>
@@ -6,6 +6,6 @@
     <p *ngIf="faceSnap.location">Présent en {{ faceSnap.location }}</p>
     <p>
         <button (click)="onSnap()">{{ buttonText }}</button>
-        {{ faceSnap.snaps }}
+        <span [ngStyle]="{ color: 'rgb(0, ' + faceSnap.snaps * 255 + ', 0)' }">{{ faceSnap.snaps }}</span>
     </p>
 </div>
