Ajour du component FaceSnapListComponent - iso-fonctionnel

--- a/angular/coding/learning/dev-env/data/new_school/snapface/src/app/app.component.html
+++ b/angular/coding/learning/dev-env/data/new_school/snapface/src/app/app.component.html
@@ -1,6 +1,6 @@
 <style>
 </style>
 
-<app-face-snap [faceSnap]="element" *ngFor="let element of faceSnaps"></app-face-snap>
+<app-face-snap-list></app-face-snap-list>
 
 <router-outlet></router-outlet>
