--- a/angular/coding/learning/dev-env/data/new_school/snapface/src/app/face-snap/face-snap.component.html
+++ b/angular/coding/learning/dev-env/data/new_school/snapface/src/app/face-snap/face-snap.component.html
@@ -1,4 +1,4 @@
-<div class="face-snap-card" [ngClass]="{ snapped: faceSnap.snaps == 1}">
+<div class="face-snap-card" [ngClass]="{ snapped: faceSnap.snaps > 0 }">
     <h2>{{ faceSnap.title | titlecase }}</h2>
     <p>{{ faceSnap.description }}</p>
     <p>
